Adds string citation

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -171,3 +171,20 @@
   pmid     = "32169160",
   doi      = "10.1016/j.devcel.2020.02.012"
 }
+
+@ARTICLE{Edgar1989-hv,
+  title    = "Genetic control of cell division patterns in the
+              \textit{{D}rosophila} embryo",
+  author   = "Edgar, B A and O'Farrell, P H",
+  journal  = "Cell",
+  volume   =  57,
+  number   =  1,
+  pages    = "177--187",
+  month    =  apr,
+  year     =  1989,
+  language = "en",
+  issn     = "0092-8674",
+  pmid     = "2702688",
+  doi      = "10.1016/0092-8674(89)90183-9",
+  pmc      = "PMC2755076"
+}
