Adds MD2 in btd and eve references

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -188,3 +188,19 @@
   doi      = "10.1016/0092-8674(89)90183-9",
   pmc      = "PMC2755076"
 }
+
+@ARTICLE{Edgar1994-pi,
+  title    = "Transcriptional regulation of \textit{string (cdc25)}: a link
+              between developmental programming and the cell cycle",
+  author   = "Edgar, B A and Lehman, D A and O'Farrell, P H",
+  journal  = "Development",
+  volume   =  120,
+  number   =  11,
+  pages    = "3131--3143",
+  month    =  nov,
+  year     =  1994,
+  language = "en",
+  issn     = "0950-1991",
+  pmid     = "7720557",
+  pmc      = "PMC2753456"
+}
