Adds references to physical interactions

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -204,3 +204,28 @@
   pmid     = "7720557",
   pmc      = "PMC2753456"
 }
+
+@INCOLLECTION{Campos-Ortega1997-rd,
+  title     = "Stages of \textit{{D}rosophila} Embryogenesis",
+  booktitle = "The Embryonic Development of \textit{{D}rosophila melanogaster}",
+  author    = "Campos-Ortega, José A and Hartenstein, Volker",
+  editor    = "Campos-Ortega, José A and Hartenstein, Volker",
+  publisher = "Springer Berlin Heidelberg",
+  pages     = "9--102",
+  year      =  1997,
+  address   = "Berlin, Heidelberg",
+  isbn      = "9783662224892",
+  doi       = "10.1007/978-3-662-22489-2\_2"
+}
+
+@UNPUBLISHED{Guo2021-sj,
+  title    = "Mechanical bistability enabled by ectodermal compression
+              facilitates Drosophila mesoderm invagination",
+  author   = "Guo, Hanqing and Swan, Michael and Huang, Shicheng and He, Bing",
+  journal  = "bioRxiv",
+  pages    = "2021.03.18.435928",
+  month    =  mar,
+  year     =  2021,
+  language = "en",
+  doi      = "10.1101/2021.03.18.435928"
+}
