Adds missing modelling paper on gastrulation flows

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -229,3 +229,21 @@
   language = "en",
   doi      = "10.1101/2021.03.18.435928"
 }
+
+@ARTICLE{Dicko2017-wz,
+  title    = "Geometry can provide long-range mechanical guidance for
+              embryogenesis",
+  author   = "Dicko, Mahamar and Saramito, Pierre and Blanchard, Guy B and Lye,
+              Claire M and Sanson, Bénédicte and Étienne, Jocelyn",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  13,
+  number   =  3,
+  pages    = "e1005443",
+  month    =  mar,
+  year     =  2017,
+  language = "en",
+  issn     = "1553-734X, 1553-7358",
+  pmid     = "28346461",
+  doi      = "10.1371/journal.pcbi.1005443",
+  pmc      = "PMC5386319"
+}
