Implements sync for bib file

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1,10 +1,36 @@
+@ARTICLE{Allena2012-pb,
+  title    = "An extensive numerical simulation of the cephalic furrow
+              formation in \textit{{D}rosophila} embryo",
+  author   = "Allena, R and Aubry, D",
+  journal  = "Comput. Methods Biomech. Biomed. Engin.",
+  volume   =  15,
+  number   =  5,
+  pages    = "445--455",
+  year     =  2012,
+  language = "en",
+  issn     = "1025-5842, 1476-8259",
+  pmid     = "21331957",
+  doi      = "10.1080/10255842.2010.539564"
+}
+
+@ARTICLE{Blankenship2001-tm,
+  title    = "Two new roles for the \textit{{D}rosophila} {AP} patterning
+              system in early morphogenesis",
+  author   = "Blankenship, J T and Wieschaus, E",
+  journal  = "Development",
+  volume   =  128,
+  number   =  24,
+  pages    = "5129--5138",
+  month    =  dec,
+  year     =  2001,
+  language = "en",
+  issn     = "0950-1991",
+  pmid     = "11748148"
+}
+
 @ARTICLE{Hartenstein1985-zs,
   title     = "Fate-mapping in wild-type \textit{{D}rosophila melanogaster}",
   author    = "Hartenstein, Volker and Campos-Ortega, Jose A",
-  abstract  = "The pattern of cell proliferation and cell movements
-               inDrosophila embryogenesis has been analysed with the aim of
-               constructing a blastoderm fate map. Post-blastoderm cell
-               proliferation starts at gastr",
   journal   = "Wilhelm Roux Arch. Entwickl. Mech. Org.",
   publisher = "Springer-Verlag",
   volume    =  194,
@@ -12,7 +38,9 @@
   pages     = "181--195",
   month     =  apr,
   year      =  1985,
-  language  = "en"
+  language  = "en",
+  issn      = "0043-5546",
+  doi       = "10.1007/BF00848246"
 }
 
 @ARTICLE{Foe1989-cw,
@@ -30,21 +58,6 @@
   pmid     = "2516798"
 }
 
-@ARTICLE{Gilmour2017-um,
-  title    = "From morphogen to morphogenesis and back",
-  author   = "Gilmour, Darren and Rembold, Martina and Leptin, Maria",
-  journal  = "Nature",
-  volume   =  541,
-  number   =  7637,
-  pages    = "311--320",
-  month    =  jan,
-  year     =  2017,
-  language = "en",
-  issn     = "0028-0836, 1476-4687",
-  pmid     = "28102269",
-  doi      = "10.1038/nature21348"
-}
-
 @ARTICLE{Spencer2015-td,
   title    = "Cell shape change and invagination of the cephalic furrow
               involves reorganization of {F}-actin",
@@ -59,38 +72,6 @@
   issn     = "0012-1606, 1095-564X",
   pmid     = "25929228",
   doi      = "10.1016/j.ydbio.2015.03.022"
-}
-
-@ARTICLE{Vincent1997-fa,
-  title    = "Integration of the head and trunk segmentation systems controls
-              cephalic furrow formation in \textit{{D}rosophila}",
-  author   = "Vincent, A and Blankenship, J T and Wieschaus, E",
-  journal  = "Development",
-  volume   =  124,
-  number   =  19,
-  pages    = "3747--3754",
-  month    =  oct,
-  year     =  1997,
-  language = "en",
-  issn     = "0950-1991",
-  pmid     = "9367430"
-}
-
-@ARTICLE{Liu2013-lc,
-  title    = "Dynamic interpretation of maternal inputs by the
-              \textit{{D}rosophila} segmentation gene network",
-  author   = "Liu, Feng and Morrison, Alexander H and Gregor, Thomas",
-  journal  = "Proc. Natl. Acad. Sci. U. S. A.",
-  volume   =  110,
-  number   =  17,
-  pages    = "6724--6729",
-  month    =  apr,
-  year     =  2013,
-  language = "en",
-  issn     = "0027-8424, 1091-6490",
-  pmid     = "23580621",
-  doi      = "10.1073/pnas.1220912110",
-  pmc      = "PMC3637740"
 }
 
 @ARTICLE{Dubuis2013-jf,
@@ -110,19 +91,37 @@
   pmc      = "PMC3799327"
 }
 
-@ARTICLE{Allena2012-pb,
-  title    = "An extensive numerical simulation of the cephalic furrow
-              formation in \textit{{D}rosophila} embryo",
-  author   = "Allena, R and Aubry, D",
-  journal  = "Comput. Methods Biomech. Biomed. Engin.",
-  volume   =  15,
-  number   =  5,
-  pages    = "445--455",
-  year     =  2012,
+@ARTICLE{Dicko2017-wz,
+  title    = "Geometry can provide long-range mechanical guidance for
+              embryogenesis",
+  author   = "Dicko, Mahamar and Saramito, Pierre and Blanchard, Guy B and Lye,
+              Claire M and Sanson, Bénédicte and Étienne, Jocelyn",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  13,
+  number   =  3,
+  pages    = "e1005443",
+  month    =  mar,
+  year     =  2017,
   language = "en",
-  issn     = "1025-5842, 1476-8259",
-  pmid     = "21331957",
-  doi      = "10.1080/10255842.2010.539564"
+  issn     = "1553-734X, 1553-7358",
+  pmid     = "28346461",
+  doi      = "10.1371/journal.pcbi.1005443",
+  pmc      = "PMC5386319"
+}
+
+@ARTICLE{Gilmour2017-um,
+  title    = "From morphogen to morphogenesis and back",
+  author   = "Gilmour, Darren and Rembold, Martina and Leptin, Maria",
+  journal  = "Nature",
+  volume   =  541,
+  number   =  7637,
+  pages    = "311--320",
+  month    =  jan,
+  year     =  2017,
+  language = "en",
+  issn     = "0028-0836, 1476-4687",
+  pmid     = "28102269",
+  doi      = "10.1038/nature21348"
 }
 
 @ARTICLE{Kong2017-ac,
@@ -141,19 +140,52 @@
   doi      = "10.1016/j.mod.2016.12.001"
 }
 
-@ARTICLE{Blankenship2001-tm,
-  title    = "Two new roles for the \textit{{D}rosophila} {AP} patterning
-              system in early morphogenesis",
-  author   = "Blankenship, J T and Wieschaus, E",
+@ARTICLE{Liu2013-lc,
+  title    = "Dynamic interpretation of maternal inputs by the
+              \textit{{D}rosophila} segmentation gene network",
+  author   = "Liu, Feng and Morrison, Alexander H and Gregor, Thomas",
+  journal  = "Proc. Natl. Acad. Sci. U. S. A.",
+  volume   =  110,
+  number   =  17,
+  pages    = "6724--6729",
+  month    =  apr,
+  year     =  2013,
+  language = "en",
+  issn     = "0027-8424, 1091-6490",
+  pmid     = "23580621",
+  doi      = "10.1073/pnas.1220912110",
+  pmc      = "PMC3637740"
+}
+
+@ARTICLE{Edgar1994-pi,
+  title    = "Transcriptional regulation of \textit{string (cdc25)}: a link
+              between developmental programming and the cell cycle",
+  author   = "Edgar, B A and Lehman, D A and O'Farrell, P H",
   journal  = "Development",
-  volume   =  128,
-  number   =  24,
-  pages    = "5129--5138",
-  month    =  dec,
-  year     =  2001,
+  volume   =  120,
+  number   =  11,
+  pages    = "3131--3143",
+  month    =  nov,
+  year     =  1994,
   language = "en",
   issn     = "0950-1991",
-  pmid     = "11748148"
+  pmid     = "7720557",
+  pmc      = "PMC2753456"
+}
+
+@ARTICLE{Vincent1997-fa,
+  title    = "Integration of the head and trunk segmentation systems controls
+              cephalic furrow formation in \textit{{D}rosophila}",
+  author   = "Vincent, A and Blankenship, J T and Wieschaus, E",
+  journal  = "Development",
+  volume   =  124,
+  number   =  19,
+  pages    = "3747--3754",
+  month    =  oct,
+  year     =  1997,
+  language = "en",
+  issn     = "0950-1991",
+  pmid     = "9367430"
 }
 
 @ARTICLE{Eritano2020-mi,
@@ -170,6 +202,19 @@
   issn     = "1534-5807, 1878-1551",
   pmid     = "32169160",
   doi      = "10.1016/j.devcel.2020.02.012"
+}
+
+@INCOLLECTION{Campos-Ortega1997-rd,
+  title     = "Stages of \textit{{D}rosophila} Embryogenesis",
+  booktitle = "The Embryonic Development of \textit{{D}rosophila melanogaster}",
+  author    = "Campos-Ortega, José A and Hartenstein, Volker",
+  editor    = "Campos-Ortega, José A and Hartenstein, Volker",
+  publisher = "Springer Berlin Heidelberg",
+  pages     = "9--102",
+  year      =  1997,
+  address   = "Berlin, Heidelberg",
+  isbn      = "9783662224892",
+  doi       = "10.1007/978-3-662-22489-2\_2"
 }
 
 @ARTICLE{Edgar1989-hv,
@@ -189,35 +234,6 @@
   pmc      = "PMC2755076"
 }
 
-@ARTICLE{Edgar1994-pi,
-  title    = "Transcriptional regulation of \textit{string (cdc25)}: a link
-              between developmental programming and the cell cycle",
-  author   = "Edgar, B A and Lehman, D A and O'Farrell, P H",
-  journal  = "Development",
-  volume   =  120,
-  number   =  11,
-  pages    = "3131--3143",
-  month    =  nov,
-  year     =  1994,
-  language = "en",
-  issn     = "0950-1991",
-  pmid     = "7720557",
-  pmc      = "PMC2753456"
-}
-
-@INCOLLECTION{Campos-Ortega1997-rd,
-  title     = "Stages of \textit{{D}rosophila} Embryogenesis",
-  booktitle = "The Embryonic Development of \textit{{D}rosophila melanogaster}",
-  author    = "Campos-Ortega, José A and Hartenstein, Volker",
-  editor    = "Campos-Ortega, José A and Hartenstein, Volker",
-  publisher = "Springer Berlin Heidelberg",
-  pages     = "9--102",
-  year      =  1997,
-  address   = "Berlin, Heidelberg",
-  isbn      = "9783662224892",
-  doi       = "10.1007/978-3-662-22489-2\_2"
-}
-
 @UNPUBLISHED{Guo2021-sj,
   title    = "Mechanical bistability enabled by ectodermal compression
               facilitates Drosophila mesoderm invagination",
@@ -228,22 +244,4 @@
   year     =  2021,
   language = "en",
   doi      = "10.1101/2021.03.18.435928"
-}
-
-@ARTICLE{Dicko2017-wz,
-  title    = "Geometry can provide long-range mechanical guidance for
-              embryogenesis",
-  author   = "Dicko, Mahamar and Saramito, Pierre and Blanchard, Guy B and Lye,
-              Claire M and Sanson, Bénédicte and Étienne, Jocelyn",
-  journal  = "PLoS Comput. Biol.",
-  volume   =  13,
-  number   =  3,
-  pages    = "e1005443",
-  month    =  mar,
-  year     =  2017,
-  language = "en",
-  issn     = "1553-734X, 1553-7358",
-  pmid     = "28346461",
-  doi      = "10.1371/journal.pcbi.1005443",
-  pmc      = "PMC5386319"
 }
