Includes infos about fly stocks

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -245,3 +245,20 @@
   language = "en",
   doi      = "10.1101/2021.03.18.435928"
 }
+
+@ARTICLE{Martin2010-pb,
+  title    = "Integration of contractile forces during tissue invagination",
+  author   = "Martin, Adam C and Gelbart, Michael and Fernandez-Gonzalez,
+              Rodrigo and Kaschube, Matthias and Wieschaus, Eric F",
+  journal  = "J. Cell Biol.",
+  volume   =  188,
+  number   =  5,
+  pages    = "735--749",
+  month    =  mar,
+  year     =  2010,
+  language = "en",
+  issn     = "0021-9525, 1540-8140",
+  pmid     = "20194639",
+  doi      = "10.1083/jcb.200910099",
+  pmc      = "PMC2835944"
+}
