Fixes staging information

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -262,3 +262,13 @@
   doi      = "10.1083/jcb.200910099",
   pmc      = "PMC2835944"
 }
+
+@BOOK{Ashburner2005-ym,
+  title     = "\textit{{D}rosophila}: A Laboratory Handbook",
+  author    = "Ashburner, M and Golic, Kent G and Hawley, R Scott",
+  publisher = "Cold Spring Harbor Laboratory Press",
+  edition   = "Second Edition",
+  year      =  2005,
+  address   = "Cold Spring Harbor, N.Y.",
+  isbn      = "9780879697068, 9781936113699"
+}
