--- a/1-analyses/folded-area/area.Rmd
+++ b/1-analyses/folded-area/area.Rmd
@@ -108,6 +108,10 @@ ggplot(results, aes(factor(Sample, level = c("control", "btd", "eve")), AreaCorr
   labs(title = "Invaginated area of cephalic furrow compared to ectopic folds", x = "sample", y = expression(micrometers^2))
 ggsave("folded-area_mutants.png")
 
+# Plot corrected area of individual folds
+ggplot(results, aes(Genotype, AreaCorr, colour = Genotype)) + geom_violin(show.legend = FALSE) + geom_jitter(alpha = 0.8, width = 0.1, show.legend = FALSE) + labs(x = "mutant", y = expression(micrometers^2)) + facet_wrap(~Stock) + scale_color_manual(values=c("#d55e00", "#e69f03")) + theme_classic()
+ggsave("folded-area_mutants_facet.png")
+
 # Plot corrected area of individual folds by genotype
 ggplot(results, aes(Genotype, AreaCorr, colour = Genotype)) + geom_violin(draw_quantiles = c("0.5")) + geom_jitter(alpha = 0.8, width = 0.15) +
   labs(x = "Genotype", y = expression(micrometers^2))
@@ -120,6 +124,10 @@ ggplot(total, aes(factor(Genotype, level = c("control", "btd", "eve")), Area, co
 ggplot(total, aes(factor(Sample, level = c("control", "btd", "eve")), AreaCorr, colour = Sample)) +
   geom_violin() + geom_jitter(alpha = 0.8, width = 0.15) +
   labs(title = "Total area of folded tissue", x = "sample", y = expression(micrometers^2))
+
+# Plot corrected area of folding per embryo
+ggplot(total, aes(Genotype, AreaCorr, colour = Genotype)) + geom_violin(show.legend = FALSE) + geom_jitter(alpha = 0.8, width = 0.1, show.legend = FALSE) + labs(x = "mutant", y = expression(micrometers^2)) + facet_wrap(~Stock) + scale_color_manual(values=c("#d55e00", "#e69f03")) + theme_classic()
+ggsave("folded-area_all_facet.png")
 
 # Plot correlation between raw area and number of folds
 ggplot(total, aes(Folds, Area, colour = Sample)) + geom_point()
