--- a/1-analyses/fold-depth/depth.Rmd
+++ b/1-analyses/fold-depth/depth.Rmd
@@ -32,7 +32,7 @@ ggplot(results, aes(Genotype, Length, color = Genotype)) + geom_violin(draw_quan
 ggsave("depth_all.png", width = 5, height = 3)
 
 # Plot stocks separately
-ggplot(results, aes(Genotype, Length, color = Genotype)) + geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) + geom_jitter(width = 0.1, show.legend = FALSE) + facet_wrap(~Sample) + labs(x = "Mutant", y = "Depth") + scale_color_manual(values=c("#d55e00", "#e69f03")) + theme_classic()
+ggplot(results, aes(Genotype, Length, color = Genotype)) + geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE) + geom_jitter(alpha = 0.8, width = 0.1, show.legend = FALSE) + facet_wrap(~Sample) + labs(x = "mutant", y = "depth") + scale_color_manual(values=c("#d55e00", "#e69f03")) + theme_classic()
 ggsave("depth_facet.png")
 
 
