Adds references about mitotic forces

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -173,6 +173,22 @@
   pmc      = "PMC2753456"
 }
 
+@ARTICLE{Gupta2021-oo,
+  title     = "The nature of cell division forces in epithelial monolayers",
+  author    = "Gupta, Vivek K and Nam, Sungmin and Yim, Donghyun and Camuglia,
+               Jaclyn and Martin, Judy Lisette and Sanders, Erin Nicole and
+               O'Brien, Lucy Erin and Martin, Adam C and Kim, Taeyoon and
+               Chaudhuri, Ovijit",
+  journal   = "J. Cell Biol.",
+  publisher = "The Rockefeller University Press",
+  volume    =  220,
+  number    =  8,
+  month     =  aug,
+  year      =  2021,
+  issn      = "0021-9525",
+  doi       = "10.1083/jcb.202011106"
+}
+
 @ARTICLE{Vincent1997-fa,
   title    = "Integration of the head and trunk segmentation systems controls
               cephalic furrow formation in \textit{{D}rosophila}",
@@ -246,6 +262,23 @@
   doi      = "10.1101/2021.03.18.435928"
 }
 
+@ARTICLE{Ko2020-wk,
+  title    = "Apical Constriction Reversal upon Mitotic Entry Underlies
+              Different Morphogenetic Outcomes of Cell Division",
+  author   = "Ko, Clint S and Kalakuntla, Prateek and Martin, Adam C",
+  journal  = "Mol. Biol. Cell",
+  volume   =  31,
+  number   =  16,
+  pages    = "1663--1674",
+  month    =  jul,
+  year     =  2020,
+  language = "en",
+  issn     = "1059-1524, 1939-4586",
+  pmid     = "32129704",
+  doi      = "10.1091/mbc.E19-12-0673",
+  pmc      = "PMC7521848"
+}
+
 @ARTICLE{Martin2010-pb,
   title    = "Integration of contractile forces during tissue invagination",
   author   = "Martin, Adam C and Gelbart, Michael and Fernandez-Gonzalez,
@@ -271,4 +304,19 @@
   year      =  2005,
   address   = "Cold Spring Harbor, N.Y.",
   isbn      = "9780879697068, 9781936113699"
+}
+
+@ARTICLE{Kondo2013-gy,
+  title    = "Mitotic cell rounding accelerates epithelial invagination",
+  author   = "Kondo, Takefumi and Hayashi, Shigeo",
+  journal  = "Nature",
+  volume   =  494,
+  number   =  7435,
+  pages    = "125--129",
+  month    =  feb,
+  year     =  2013,
+  language = "en",
+  issn     = "0028-0836, 1476-4687",
+  pmid     = "23334416",
+  doi      = "10.1038/nature11792"
 }
