Changes in abstract, background and results

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -1,3 +1,33 @@
+@ARTICLE{McGinnis1992-qj,
+  title   = "Homeobox genes and axial patterning",
+  author  = "McGinnis, W and Krumlauf, R",
+  journal = "Cell",
+  volume  =  68,
+  number  =  2,
+  pages   = "283--302",
+  month   =  jan,
+  year    =  1992,
+  issn    = "0092-8674",
+  pmid    = "1346368"
+}
+
+@ARTICLE{Bruce1998-ek,
+  title     = "Expression of the head gene {Lox22-Otx} in the leech Helobdella
+               and the origin of the bilaterian body plan",
+  author    = "Bruce, A E and Shankland, M",
+  journal   = "Dev. Biol.",
+  publisher = "Elsevier",
+  volume    =  201,
+  number    =  1,
+  pages     = "101--112",
+  month     =  sep,
+  year      =  1998,
+  language  = "en",
+  issn      = "0012-1606",
+  pmid      = "9733577",
+  doi       = "10.1006/dbio.1998.8968"
+}
+
 @ARTICLE{Allena2012-pb,
   title    = "An extensive numerical simulation of the cephalic furrow
               formation in \textit{{D}rosophila} embryo",
@@ -72,6 +102,23 @@
   issn     = "0012-1606, 1095-564X",
   pmid     = "25929228",
   doi      = "10.1016/j.ydbio.2015.03.022"
+}
+
+@ARTICLE{Simeone1992-ny,
+  title    = "Nested expression domains of four homeobox genes in developing
+              rostral brain",
+  author   = "Simeone, A and Acampora, D and Gulisano, M and Stornaiuolo, A and
+              Boncinelli, E",
+  journal  = "Nature",
+  volume   =  358,
+  number   =  6388,
+  pages    = "687--690",
+  month    =  aug,
+  year     =  1992,
+  language = "en",
+  issn     = "0028-0836",
+  pmid     = "1353865",
+  doi      = "10.1038/358687a0"
 }
 
 @ARTICLE{Dubuis2013-jf,
@@ -155,6 +202,18 @@
   pmid     = "23580621",
   doi      = "10.1073/pnas.1220912110",
   pmc      = "PMC3637740"
+}
+
+@ARTICLE{Holland1988-ii,
+  title    = "Homeobox genes and the vertebrate head",
+  author   = "Holland, P W",
+  journal  = "Development",
+  volume   = "103 Suppl",
+  pages    = "17--24",
+  year     =  1988,
+  language = "en",
+  issn     = "0950-1991",
+  pmid     = "2907986"
 }
 
 @ARTICLE{Edgar1994-pi,
