Consolidates a working discussion

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -263,6 +263,21 @@
   pmid     = "9367430"
 }
 
+@ARTICLE{Denk-Lobnig2020-pr,
+  title    = "Divergent and combinatorial mechanical strategies that promote
+              epithelial folding during morphogenesis",
+  author   = "Denk-Lobnig, Marlis and Martin, Adam C",
+  journal  = "Curr. Opin. Genet. Dev.",
+  volume   =  63,
+  pages    = "24--29",
+  month    =  mar,
+  year     =  2020,
+  language = "en",
+  issn     = "0959-437X, 1879-0380",
+  pmid     = "32171160",
+  doi      = "10.1016/j.gde.2020.02.014"
+}
+
 @ARTICLE{Eritano2020-mi,
   title    = "{Tissue-Scale} Mechanical Coupling Reduces Morphogenetic Noise to
               Ensure Precision during Epithelial Folding",
@@ -290,6 +305,17 @@
   address   = "Berlin, Heidelberg",
   isbn      = "9783662224892",
   doi       = "10.1007/978-3-662-22489-2\_2"
+}
+
+@ARTICLE{Collinet2021-qa,
+  title   = "Programmed and self-organized flow of information during
+             morphogenesis",
+  author  = "Collinet, Claudio and Lecuit, Thomas",
+  journal = "Nat. Rev. Mol. Cell Biol.",
+  month   =  jan,
+  year    =  2021,
+  issn    = "1471-0072, 1471-0080",
+  doi     = "10.1038/s41580-020-00318-6"
 }
 
 @ARTICLE{Edgar1989-hv,
@@ -378,4 +404,25 @@
   issn     = "0028-0836, 1476-4687",
   pmid     = "23334416",
   doi      = "10.1038/nature11792"
+}
+
+@ARTICLE{Freddo2016-et,
+  title    = "Coordination of signaling and tissue mechanics during
+              morphogenesis of murine intestinal villi: a role for mitotic cell
+              rounding",
+  author   = "Freddo, Andrew M and Shoffner, Suzanne K and Shao, Yue and
+              Taniguchi, Kenichiro and Grosse, Ann S and Guysinger, Margaux N
+              and Wang, Sha and Rudraraju, Shiva and Margolis, Benjamin and
+              Garikipati, Krishna and Schnell, Santiago and Gumucio, Deborah L",
+  journal  = "Integr. Biol.",
+  volume   =  8,
+  number   =  9,
+  pages    = "918--928",
+  month    =  sep,
+  year     =  2016,
+  language = "en",
+  issn     = "1757-9694, 1757-9708",
+  pmid     = "27476872",
+  doi      = "10.1039/c6ib00046k",
+  pmc      = "PMC5021607"
 }
