Incorporate Ju's suggestions to discussion

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -406,6 +406,23 @@
   doi      = "10.1038/nature11792"
 }
 
+@ARTICLE{Nelson2016-gz,
+  title     = "On Buckling Morphogenesis",
+  author    = "Nelson, Celeste M",
+  journal   = "J. Biomech. Eng.",
+  publisher = "asmedigitalcollection.asme.org",
+  volume    =  138,
+  number    =  2,
+  pages     = "021005",
+  month     =  feb,
+  year      =  2016,
+  language  = "en",
+  issn      = "0148-0731, 1528-8951",
+  pmid      = "26632268",
+  doi       = "10.1115/1.4032128",
+  pmc       = "PMC4844087"
+}
+
 @ARTICLE{Freddo2016-et,
   title    = "Coordination of signaling and tissue mechanics during
               morphogenesis of murine intestinal villi: a role for mitotic cell
